--- a/pekko-server/src/main/resources/application.conf
+++ b/pekko-server/src/main/resources/application.conf
@@ -9,13 +9,13 @@ pekko {
   remote {
     artery {
       canonical.hostname = "127.0.0.1"
-      canonical.port = 0
+      canonical.port = 9906
     }
   }
   cluster {
-    seed-nodes = [
-      "pekko://ClusterSystem@127.0.0.1:17356",
-      "pekko://ClusterSystem@127.0.0.1:17357"]
+#     seed-nodes = [
+#       "pekko://ClusterSystem@127.0.0.1:17356",
+#       "pekko://ClusterSystem@127.0.0.1:17357"]
     downing-provider-class = "org.apache.pekko.cluster.sbr.SplitBrainResolverProvider"
   }
 }
