[feat]: Start a Pekko cluster service

--- a/pekko-server/src/main/resources/application.conf
+++ b/pekko-server/src/main/resources/application.conf
@@ -1,7 +1,18 @@
 pekko {
+
+  pekko-sys = "pekko-cluster-system"
+  project-version = "0.1"
+
+  log-dead-letters = 1
+  log-dead-letters-suspend-duration = 25 minutes
+  coordinated-shutdown.exit-jvm = on
   actor {
     provider = cluster
 
+    serializers {
+      jackson-cbor = "org.apache.pekko.serialization.jackson.JacksonCborSerializer"
+      jackson-json = "org.apache.pekko.serialization.jackson.JacksonJsonSerializer"
+    }
     serialization-bindings {
       "cn.xuyinyin.magic.common.CborSerializable" = jackson-cbor
     }
@@ -13,10 +24,21 @@ pekko {
     }
   }
   cluster {
+# No seed-nodes configured, manual cluster join required, see https://pekko.apache.org/docs/pekko/current/typed/cluster.html#joining
 #     seed-nodes = [
 #       "pekko://ClusterSystem@127.0.0.1:17356",
 #       "pekko://ClusterSystem@127.0.0.1:17357"]
     downing-provider-class = "org.apache.pekko.cluster.sbr.SplitBrainResolverProvider"
+    shutdown-after-unsuccessful-join-seed-nodes = 30s
+  }
+  management {
+    cluster.bootstrap {
+      contact-point-discovery {
+        discovery-method = kubernetes-api
+        required-contact-point-nr = 1
+        service-name = ${pekko.pekko-sys}
+      }
+    }
   }
 }
 
