--- a/pekko-server/src/main/resources/reference.conf
+++ b/pekko-server/src/main/resources/reference.conf
@@ -5,6 +5,19 @@ pekko {
   log-dead-letters = 1
   log-dead-letters-suspend-duration = 25 minutes
   coordinated-shutdown.exit-jvm = on
+  dispatcher {
+    # default dispatcher.
+    default {
+      type = Dispatcher
+      executor = "fork-join-executor"
+      fork-join-executor {
+        parallelism-min = 2
+        parallelism-max = 32
+        parallelism-factor = 2.0
+      }
+      throughput = 100
+    }
+  }
   actor {
     provider = cluster
 
@@ -28,6 +41,7 @@ pekko {
     shutdown-after-unsuccessful-join-seed-nodes = 30s
     # server、dispatcher、worker
     roles = ["server-all"]
+    internal-dispatcher = pekko.dispatcher.default
   }
   management {
     cluster.bootstrap {
