[feat]:  finish cluster single

--- a/pekko-server/src/main/resources/reference.conf
+++ b/pekko-server/src/main/resources/reference.conf
@@ -29,20 +29,20 @@ pekko {
       "cn.xuyinyin.magic.common.CborSerializable" = jackson-cbor
     }
   }
-  remote {
-    artery {
-      canonical.hostname = "127.0.0.1"
-      canonical.port = 9906
-    }
-  }
+
   cluster {
-    # seed-nodes = ["pekko://ClusterSystem@127.0.0.1:17356"]
+    seed-nodes = ["pekko://"${prism.pekko-sys}"@127.0.0.1:9906"]
     downing-provider-class = "org.apache.pekko.cluster.sbr.SplitBrainResolverProvider"
     shutdown-after-unsuccessful-join-seed-nodes = 30s
     # server、dispatcher、worker
     roles = ["server-all"]
     internal-dispatcher = pekko.dispatcher.default
   }
+  remote.artery {
+     canonical.hostname = "127.0.0.1"
+     canonical.port = 9906
+  }
+
   management {
     cluster.bootstrap {
       contact-point-discovery {
