--- a/pekko-server/src/main/resources/reference.conf
+++ b/pekko-server/src/main/resources/reference.conf
@@ -31,7 +31,7 @@ pekko {
   }
 
   cluster {
-    seed-nodes = ["pekko://"${prism.pekko-sys}"@127.0.0.1:9906"]
+    seed-nodes = ["pekko://"${pekko.pekko-sys}"@127.0.0.1:9906"]
     downing-provider-class = "org.apache.pekko.cluster.sbr.SplitBrainResolverProvider"
     shutdown-after-unsuccessful-join-seed-nodes = 30s
     # server、dispatcher、worker
