--- a/pekko-server/src/main/resources/application.conf
+++ b/pekko-server/src/main/resources/application.conf
@@ -4,3 +4,16 @@ pekko {
   global-task-limit = 10
 }
 
+
+# Load using SlickSession.forConfig("slick-h2")
+slick-h2 {
+  profile = "slick.jdbc.H2Profile$"
+  db {
+    connectionPool = disabled
+    dataSourceClass = "slick.jdbc.DriverDataSource"
+    properties = {
+      driver = "org.h2.Driver"
+      url = "jdbc:h2:"${java.io.tmpdir}"/pekko-connectors-slick-h2-test"
+    }
+  }
+}
