--- a/pekko-server/src/main/resources/application.conf
+++ b/pekko-server/src/main/resources/application.conf
@@ -60,6 +60,44 @@ pekko {
       }
     }
   }
+  
+  # Event Sourcing持久化配置
+  persistence {
+    journal {
+      plugin = "pekko.persistence.journal.leveldb"
+      leveldb {
+        dir = "target/journal"
+        native = false
+        # 生产环境建议使用 Cassandra 或 PostgreSQL
+      }
+    }
+    
+    snapshot-store {
+      plugin = "pekko.persistence.snapshot-store.local"
+      local {
+        dir = "target/snapshots"
+      }
+    }
+    
+    # 自动启动持久化查询
+    query {
+      journal {
+        leveldb {
+          refresh-interval = 1s
+        }
+      }
+    }
+  }
+  
+  # 工作流事件溯源配置
+  workflow {
+    event-sourcing {
+      # 每100个事件保存一次快照
+      snapshot-every = 100
+      # 保留最近2个快照
+      keep-n-snapshots = 2
+    }
+  }
 }
 
 
